--- a/package.json
+++ b/package.json
@@ -391,7 +391,7 @@
                 },
                 "alive.autoCompileOnType": {
                     "type": "boolean",
-                    "default": false,
+                    "default": true,
                     "description": "Specify whether to compile files as you type"
                 },
                 "alive.debug": {
